--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   },
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "mongoose": "^6.0.5",
     "nodemon": "^2.0.12"
   }
 }
